# miami-project

./: .gitignore  CUDA_TRAINING_GUIDE.md  DS3M_ARCHITECTURE.md  H200_SETUP.md  MASTER_PLAN.md  SCHEMA.md  TRADING_BOT_DESIGN.md  cli_timing_backfill.py  config.toml  finetune_low_head.py  polymarket_puller.py  pull_kalshi_candles.py  pull_kalshi_low_markets.py  pyproject.toml  train_2gpu.sh  train_4gpu.sh  train_h200.py
.claude/: launch.json
analysis_data/: archive_audit_report.json  archive_audit_report.md  backtest_replay_trades.ndjson  backtest_residual_results.ndjson  boa_family_weight_audit.md  boa_state.json  canonical_replay_bundle.json  canonical_replay_bundle.md  changepoint_compare.json  changepoint_compare.md  cusum_config.json  cusum_config.proposed.json  drift_report.json  emos_state.json  exit_tuner_state.json  health_report.json  inference_config.json  letkf_tune_state.json  pnl_regime.json  review_labels.ndjson  sigma_clim_KMIA_m03.json  skf_config.json  skf_config.proposed.json  source_trust_backfill.json  source_trust_backfill.md  source_trust_refresh.json  source_trust_state.json  training_snapshots.ndjson
cron/: daily-post-settlement.md
docs/: ds3m_money_machine_plan.md
plans/: DS3M_MIGRATION_PLAN.md
scripts/: ablation_dashboard.py  data_completeness_audit.py  e2e_data_flow_test.py  hrrr_archive_pull.py  hrrr_subhourly_pull.py  migrate_ensemble.py  orderbook_collector.py  pull_era5.py  pull_era5_fast.py  pull_fawn_history.py  pull_iem_raob.py  pull_lightning_glm.py  pull_mos_history.py  pull_mrms_reflectivity.py  pull_ndbc_history.py  pull_ocean_data.py  pull_pressure_level_winds.py  pull_teleconnections.py  pull_upper_air.py
summaries_archived/: 2026-03-15-KMIA.md  2026-03-16-KMIA.md  2026-03-17-KMIA-intraday-12pm.md
(+206 files in other folders)
